Arvind: code cleanup for deprecated APIs.